fix: static seo meta tags added in the index.html file

--- a/index.html
+++ b/index.html
@@ -1,6 +1,64 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head> </head>
+	<head>
+		<!-- Meta Tag Generali  -->
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<link
+			rel="icon"
+			type="image/svg+xml"
+			href="https://global-heat-dashboard.netlify.app/favicon.ico"
+		/>
+		<title>Global Heat Dashboard</title>
+		<meta
+			name="description"
+			content="Global Heat Dashboard è un'applicazione web interattiva che visualizza dati globali sulle temperature ed emissioni, aiutando a comprendere l'impatto dei cambiamenti climatici."
+		/>
+		<meta name="url" content="https://global-heat-dashboard.netlify.app/" />
+
+		<!-- Open Graph Meta Tags (per Facebook, LinkedIn, ecc.)  -->
+		<meta property="og:title" content="Global Heat Dashboard" />
+		<meta
+			property="og:description"
+			content="Global Heat Dashboard è un'applicazione web interattiva che visualizza dati globali sulle temperature ed emissioni, aiutando a comprendere l'impatto dei cambiamenti climatici."
+		/>
+		<meta
+			property="og:image"
+			content="https://global-heat-dashboard.netlify.app/global-heat-dashboard-preview.png"
+		/>
+		<meta name="og:image:alt" content="Global Heat Dashboard Preview" />
+		<meta name="og:image:width" content="1200" />
+		<meta name="og:image:height" content="630" />
+		<meta
+			property="og:url"
+			content="https://global-heat-dashboard.netlify.app/"
+		/>
+		<meta property="og:type" content="website" />
+		<meta property="og:site_name" content="Global Heat Dashboard" />
+
+		<!-- Twitter Card Meta Tags  -->
+		<meta name="twitter:card" content="summary_large_image" />
+		<meta name="twitter:title" content="Global Heat Dashboard" />
+		<meta
+			name="twitter:description"
+			content="Global Heat Dashboard è un'applicazione web interattiva che visualizza dati globali sulle temperature ed emissioni, aiutando a comprendere l'impatto dei cambiamenti climatici."
+		/>
+		<meta
+			name="twitter:url"
+			content="https://global-heat-dashboard.netlify.app/"
+		/>
+		<meta name="twitter:type" content="website" />
+		<meta
+			name="twitter:image"
+			content="https://global-heat-dashboard.netlify.app/global-heat-dashboard-preview.png"
+		/>
+		<meta
+			name="twitter:image:alt"
+			content="Global Heat Dashboard Website Preview"
+		/>
+		<meta name="twitter:image:width" content="1200" />
+		<meta name="twitter:image:height" content="630" />
+	</head>
 	<body>
 		<div id="root"></div>
 		<script type="module" src="/src/main.jsx"></script>
