fix: open graph meta tags

--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
 			property="og:image"
 			content="https://global-heat-dashboard.netlify.app/global-heat-dashboard-preview.png"
 		/>
-		<meta name="og:image:alt" content="Global Heat Dashboard Preview" />
-		<meta name="og:image:width" content="1200" />
-		<meta name="og:image:height" content="630" />
+		<meta property="og:image:alt" content="Global Heat Dashboard Preview" />
+		<meta property="og:image:width" content="1200" />
+		<meta property="og:image:height" content="630" />
 		<meta
 			property="og:url"
 			content="https://global-heat-dashboard.netlify.app/"
